Code Cleanup Hausaufgabe